# collect_into_file

./: Cargo.toml
src/: lib.rs
