[package]
name = "collect_into_file"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"

[dev-dependencies]
temp_testdir = "0.2"
